uppdaterade Task-53 med koden från förra git-projekt.

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -552,11 +552,19 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="no-fonflikt\ace.js" />
+    <Content Include="no-fonflikt\doc.js" />
+    <Content Include="no-fonflikt\ext-language_tools.js" />
+    <Content Include="no-fonflikt\snippets\javascript.js" />
+    <Content Include="no-fonflikt\mode-javascript.js" />
+    <Content Include="no-fonflikt\snippets\text.js" />
+    <Content Include="no-fonflikt\theme-tomorrow.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\documentjs.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
