--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -561,6 +561,7 @@
     <Content Include="no-fonflikt\theme-tomorrow.js" />
     <Content Include="pics\arrows.png" />
     <Content Include="pics\arrowsup.png" />
+    <Content Include="pics\cartoongearwheel.png" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Scripts\bootstrap.js" />
