--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -554,6 +554,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="no-fonflikt\ace.js" />
     <Content Include="no-fonflikt\doc.js" />
+    <Content Include="no-fonflikt\edit_session.js" />
     <Content Include="no-fonflikt\ext-language_tools.js" />
     <Content Include="no-fonflikt\snippets\javascript.js" />
     <Content Include="no-fonflikt\mode-javascript.js" />
@@ -563,6 +564,7 @@
     <Content Include="pics\arrowsup.png" />
     <Content Include="pics\arrow_icon.png" />
     <Content Include="pics\cartoongearwheel.png" />
+    <Content Include="pics\picof.png" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Scripts\bootstrap.js" />
