--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -565,7 +565,9 @@
     <Content Include="pics\arrowsup.png" />
     <Content Include="pics\arrow_icon.png" />
     <Content Include="pics\cartoongearwheel.png" />
+    <Content Include="pics\minus.png" />
     <Content Include="pics\picof.png" />
+    <Content Include="pics\plus.png" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Scripts\bootstrap.js" />
