added a new css file

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\aboutModel.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -548,6 +549,14 @@
     <Content Include="ace\worker-xquery.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\styleIndex.css" />
+    <Content Include="Content\FileManagerDesign.css" />
+    <Content Include="Content\Icons\document.png" />
+    <Content Include="Content\Icons\folder-horizontal.png" />
+    <Content Include="Content\Icons\JSIcon16X16.png" />
+    <Content Include="Content\Icons\toggle-small-expand.png" />
+    <Content Include="Content\Icons\toggle-small.png" />
+    <Content Include="Content\Task67.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -567,12 +576,30 @@
     <Content Include="pics\cartoongearwheel.png" />
     <Content Include="pics\minus.png" />
     <Content Include="pics\picof.png" />
+    <Content Include="img\check-icon.png" />
+    <Content Include="img\emblem-dropbox-unsyncable.png" />
+    <Content Include="img\good_or_tick.png" />
+    <Content Include="img\red-green-ok-not-ok-icons-1.png" />
+    <Content Include="mycss\jquery.terminal.css" />
+    <Content Include="mycss\jquery.terminal.min.css" />
+    <Content Include="mycss\StyleSheet1.css" />
+    <Content Include="myjs\CodeToBeRun.js" />
+    <Content Include="myjs\header.js" />
+    <Content Include="myjs\jquery-1.7.1.min.js" />
+    <Content Include="myjs\jquery.mousewheel-min.js" />
+    <Content Include="myjs\jquery.terminal.js" />
+    <Content Include="myjs\jquery.terminal.min.js" />
+    <Content Include="myjs\loadTheTerminal.js" />
+    <Content Include="myjs\tabs.js" />
+    <Content Include="myjs\terminal.js" />
     <Content Include="pics\plus.png" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
+    <Content Include="Scripts\autoSave.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\FileManagement.js" />
     <Content Include="Scripts\documentjs.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -584,7 +611,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\VariableChecks.js" />
     <Content Include="Scripts\_references.js" />
+    <None Include="Views\Home\preView.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -619,9 +648,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Home\test.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="pictures\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
