Changed a lot in doc.js so there is barely anything else than settings now. Changed a few styling parts of features and added some comments to code, added comments to css stylesheets, js files.

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -549,6 +549,7 @@
     <Content Include="ace\worker-xquery.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\bootstrapnonscroll.css" />
     <Content Include="Content\style67.css" />
     <Content Include="Content\styleIndex.css" />
     <Content Include="Content\FileManagerDesign.css" />
@@ -574,6 +575,7 @@
     <Content Include="pics\arrowsup.png" />
     <Content Include="pics\arrow_icon.png" />
     <Content Include="pics\cartoongearwheel.png" />
+    <Content Include="pics\minus.png" />
     <Content Include="pics\picof.png" />
     <Content Include="img\check-icon.png" />
     <Content Include="img\emblem-dropbox-unsyncable.png" />
