Implemented a new logo and minor changes

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -550,9 +550,15 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrapnonscroll.css" />
+    <Content Include="Content\Icons\ajea.png" />
+    <Content Include="Content\Icons\ajeapic.png" />
+    <Content Include="Content\Icons\csh.png" />
     <Content Include="Content\Icons\csharp.png" />
     <Content Include="Content\Icons\css.png" />
+    <Content Include="Content\Icons\csse.png" />
     <Content Include="Content\Icons\html.png" />
+    <Content Include="Content\Icons\htmle.png" />
+    <Content Include="Content\Icons\js.png" />
     <Content Include="Content\style67.css" />
     <Content Include="Content\styleIndex.css" />
     <Content Include="Content\FileManagerDesign.css" />
